--- a/assignment1b/style.css
+++ b/assignment1b/style.css
@@ -61,7 +61,7 @@ body > * {
   padding: 1%;
 }
 
-main, header, nav, article, aside, footer, section {
+.main, header, nav, article, aside, footer, section {
   background-color: rgba(0,255,0,0.5);
   padding: 1%;
 }
@@ -71,32 +71,32 @@ h1 {
   text-transform: uppercase;
 }
 
-header img {
+.header img {
   display: block;
   height: 60px;
   padding-top: 20.15px;
 }
 
-nav {
+.nav {
   height: 50px;
   flex: 100%;
   display: flex;
 }
 
-nav ul {
+.nav ul {
   padding: 0;
   list-style-type: none;
   flex: 2;
   display: flex;
 }
 
-nav li {
+.nav li {
   display: inline;
   text-align: center;
   flex: 1;
 }
 
-nav a, nav span {
+.nav a, nav span {
   display: inline-block;
   font-size: 2rem;
   height: 3rem;
@@ -136,3 +136,6 @@ aside img {
 footer {
   margin-top: 10px;
 }
+
+
+
