--- a/assignment1b/style.css
+++ b/assignment1b/style.css
@@ -50,18 +50,18 @@ p, li {
 
 /* || header layout */
 
-header {
-  margin-bottom: 10px;
+.header {
   display: flex;
   flex-flow: row wrap;
 }
 
+
 body > * {
-  background-color: red;
+  background-color: rgb(85, 212, 84);
   padding: 1%;
 }
 
-.main, header, nav, article, aside, footer, section {
+main, header, nav, article, aside, footer, section {
   background-color: rgba(0,255,0,0.5);
   padding: 1%;
 }
@@ -72,31 +72,34 @@ h1 {
 }
 
 .header img {
+  
   display: block;
   height: 60px;
   padding-top: 20.15px;
+
 }
 
-.nav {
+nav {
   height: 50px;
   flex: 100%;
   display: flex;
 }
 
-.nav ul {
+
+nav ul {
   padding: 0;
   list-style-type: none;
   flex: 2;
   display: flex;
 }
 
-.nav li {
+nav li {
   display: inline;
   text-align: center;
   flex: 1;
 }
 
-.nav a, nav span {
+nav a, nav span {
   display: inline-block;
   font-size: 2rem;
   height: 3rem;
@@ -105,6 +108,41 @@ h1 {
   text-decoration: none;
   color: black;
 
+}
+ul#horizontal-list {
+  text-align: center;
+	min-width: 696px;
+	list-style: none;
+	padding-top: 20px;
+  padding-right:10px ;
+	}
+	ul#horizontal-list li {
+		display: inline;
+    margin-right: 90px;}
+
+.names {
+    background-color: rgba(39,233,42) ;
+    padding-bottom: 10px;
+
+	}
+.testtt{
+  padding: 5px;
+}
+
+
+
+
+.photos {
+  background-color: rgba(39,233,42) ;
+
+  width: 250px;
+  height: 250px;
+  margin: 0 auto;
+}
+
+.photos  img {
+  float: left;
+  width: 45%;
 }
 
 /* || main layout */
@@ -125,7 +163,7 @@ aside {
 
 aside a {
   display: block;
-  float: left;
+  float: right;
   width: 50%;
 }
 
@@ -137,5 +175,37 @@ footer {
   margin-top: 10px;
 }
 
+.main{
+  
+  display : flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 10px;
+  margin-top: 10px;
 
 
+}
+
+.welcome{
+    flex : 1;
+    background-color: rgba(39,233,42) ;
+    padding-left: 10px;
+    padding-right: 20px;
+    padding-bottom: 260px;
+    margin-left: 2px;
+    margin-right: 10px;
+    padding-bottom: 160px;
+  }
+
+.myclass {
+  flex : 0.25;
+  background-color: rgba(39,233,42);
+  padding-left: 10px;
+  padding-right: 20px;
+  margin-left: 10px;
+}
+
+.end {
+  margin-bottom: 10px;
+
+}
