--- a/assignment3b/style.css
+++ b/assignment3b/style.css
@@ -1,5 +1,12 @@
 html {
     font-family: sans-serif;
   }
+
+.box {
+    width: 200px;
+  height: 200px;
+  background-color: red;
+  
+}
   
   /* Your CSS below here */
