--- a/assignment3b/style.css
+++ b/assignment3b/style.css
@@ -2,11 +2,29 @@ html {
     font-family: sans-serif;
   }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
 .box {
     width: 200px;
-  height: 200px;
-  background-color: red;
-  
+    height: 200px;
+    background-color: red;
+    text-align: center;
+    color: white;
+    line-height: 200px;
+    background-image: linear-gradient(
+    to top left,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2) 30%,
+    rgba(0, 0, 0, 0)
+  );
+    border-radius: 10px;
+    border: 1px solid #990000;
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
+    inset -2px -2px 3px rgba(0, 0, 0, 0.6), 2px 2px 5px black;
 }
-  
-  /* Your CSS below here */
