--- a/assignment3d/style.css
+++ b/assignment3d/style.css
@@ -13,39 +13,51 @@ body {
   .logo {
     font-size: 200%;
     padding: 50px 20px;
-    margin: 0 auto;
+    margin: auto;
     max-width: 980px;
   }
   
   .grid {
-    margin: 0 auto;
-    padding: 0 20px;
+    margin: auto;
+    padding: 20px;
     max-width: 980px;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 20px;
   }
   
   nav {
     background-color: #000;
-    padding: .5em;
+    padding: 1em;
+    top: 0;
+    position: sticky;
   }
   
   nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
+    display: flex;
+    justify-content: space-between;
   }
   
   nav a {
     color: #fff;
     text-decoration: none;
-    padding: .5em 1em;
+    padding: 1em 1em;
   }
   
   .photos {
     list-style: none;
     margin: 0;
     padding: 0;
+    display: grid;
+    gap: 1px;
+    grid-template-columns: 1fr 1fr;
   }
 
   .feature {
       width: 200px;
+      float: left;
+      margin: 20px
   }
